# glfw_test

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Resources/FragmentShaders/: DarkShadedModelsFrag.glsl  DarkerMeshFrag.glsl  ShadedModelsFrag.glsl  SpriteFrag.glsl
Resources/VertexShaders/: ShadedModelsVert.glsl
Resoures/FragmentShaders/: Basic.fshader
Resoures/VertexShaders/: Basic.vshader
include/: Camera.hpp  Coplien.hpp  Font.hpp  Font3d.hpp  Functions.hpp  GraphicsErrors.hpp  Image.hpp  Juicy.hpp  Log.hpp  Mesh.hpp  ModelGroup.hpp  ModelSprite.hpp  ModelTexture.hpp  Model_Sprite.hpp  Model_Texture.hpp  Models.hpp  MultipleOfModel.hpp  PreProcessor.hpp  Shaders.hpp  SpriteRender.hpp  Structs.hpp  Text.hpp  Texture.hpp  Texture2d.hpp  TextureImages.hpp  Window.hpp
samples/: modelsample.cpp  textsample.cpp  texturesample.cpp
src/: Camera.cpp  Font.cpp  Font3d.cpp  Functions.cpp  Image.cpp  Juicy.cpp  Log.cpp  Mesh.cpp  ModelGroup.cpp  ModelSprite.cpp  ModelTexture.cpp  Model_Sprite.cpp  Model_Texture.cpp  Models.cpp  MultipleOfModel.cpp  Shaders.cpp  SpriteRender.cpp  Text.cpp  Texture.cpp  Texture2d.cpp  TextureImages.cpp  Window.cpp  main.cpp
